Improved how to show products

--- a/presentation/src/main/res/layout/activity_products.xml
+++ b/presentation/src/main/res/layout/activity_products.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".products.ProductsActivity">
+    tools:context=".products.ProductsActivity"
+    android:background="@color/colorPrimary"
+    android:padding="4dp">
 
     <Button
         android:id="@+id/searchButton"
@@ -18,8 +20,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProducts"
-        android:layout_width="409dp"
-        android:layout_height="681dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
