--- a/presentation/src/main/res/drawable/shape_bg_item_product.xml
+++ b/presentation/src/main/res/drawable/shape_bg_item_product.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp"/>
-    <solid android:color="@color/color_item_product_bg"/>
+    <solid android:color="@color/color_white"/>
 </shape>
