--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#302F2F</color>
     <color name="colorPrimaryDark">#232323</color>
     <color name="colorAccent">#DADADA</color>
-    <color name="color_item_product_bg">#FFFFFF</color>
+    <color name="color_white">#FFFFFF</color>
 </resources>
