--- a/presentation/src/main/res/layout/activity_products.xml
+++ b/presentation/src/main/res/layout/activity_products.xml
@@ -18,4 +18,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imgUserFeedbackProducts"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:tint="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="@+id/rvProducts"
+        app:layout_constraintEnd_toEndOf="@+id/rvProducts"
+        app:layout_constraintStart_toStartOf="@+id/rvProducts"
+        app:layout_constraintTop_toTopOf="@+id/rvProducts"
+        app:layout_constraintVertical_bias="0.32999998"
+        tools:srcCompat="@drawable/ic_search_black_24dp" />
+
+    <TextView
+        android:id="@+id/txtUserFeedbackProducts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgUserFeedbackProducts"
+        tools:text="No products for your search" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
