--- a/presentation/src/main/res/layout/activity_products.xml
+++ b/presentation/src/main/res/layout/activity_products.xml
@@ -42,4 +42,16 @@
         app:layout_constraintTop_toBottomOf="@+id/imgUserFeedbackProducts"
         tools:text="No products for your search" />
 
+    <ProgressBar
+        android:id="@+id/progressBarProducts"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/rvProducts"
+        app:layout_constraintEnd_toEndOf="@+id/rvProducts"
+        app:layout_constraintStart_toStartOf="@+id/rvProducts"
+        app:layout_constraintTop_toTopOf="@+id/rvProducts"
+        app:layout_constraintVertical_bias="0.32999998" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
