--- a/presentation/src/main/res/layout/activity_product_detail.xml
+++ b/presentation/src/main/res/layout/activity_product_detail.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
     tools:context=".details.ProductDetailActivity">
+
+  <ImageView
+      android:id="@+id/imgUserFeedbackDetails"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:tint="@color/color_black"
+      app:layout_constraintBottom_toTopOf="@+id/btnComprarProduct"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/productDetailImage"
+      tools:srcCompat="@tools:sample/avatars"
+      tools:visibility="gone" />
 
   <ImageView
       android:id="@+id/productDetailImage"
@@ -19,13 +31,93 @@
       app:layout_constraintTop_toTopOf="parent"
       tools:srcCompat="@tools:sample/avatars" />
 
-  <TextView
-      android:id="@+id/tvProductDetailsTitle"
+  <ProgressBar
+      android:id="@+id/progressBarDetails"
+      style="?android:attr/progressBarStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      tools:text="TextView"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/productDetailImage" />
+      app:layout_constraintTop_toBottomOf="@+id/productDetailImage"
+      tools:visibility="gone" />
+
+  <Button
+      android:id="@+id/btnComprarProduct"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:text="@string/button_title_buy"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+
+  <ScrollView
+      android:id="@+id/productDetailsContainer"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_marginTop="32dp"
+      android:layout_marginBottom="16dp"
+      android:fillViewport="true"
+      tools:visibility="visible"
+      app:layout_constraintBottom_toTopOf="@+id/btnComprarProduct"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/productDetailImage">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+      <TextView
+          android:id="@+id/tvProductDetailsTitle"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="8dp"
+          android:textSize="23sp"
+          android:textColor="@color/color_black"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/txtConditionSellsInfo"
+          tools:text="My Awesomw Product" />
+
+      <TextView
+          android:id="@+id/txtConditionSellsInfo"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="8dp"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          tools:text="New - 166 Sold" />
+
+      <TextView
+          android:id="@+id/txtProductDetailPrice"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="8dp"
+          android:textColor="@color/color_price"
+          android:textSize="25sp"
+          android:textStyle="bold"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/tvProductDetailsTitle"
+          tools:text="$ 400.000" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+  </ScrollView>
+
+  <TextView
+      android:id="@+id/txtMsgUserFeedbackDetails"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imgUserFeedbackDetails"
+      tools:text="Something went wrong"
+      tools:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
