--- a/presentation/src/main/res/layout/activity_product_detail.xml
+++ b/presentation/src/main/res/layout/activity_product_detail.xml
@@ -89,6 +89,7 @@
           android:layout_marginTop="16dp"
           android:text="@string/msg_description"
           android:textStyle="bold"
+          android:textSize="20sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/txtProductDetailPrice" />
 
