--- a/presentation/src/main/res/layout/activity_products.xml
+++ b/presentation/src/main/res/layout/activity_products.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".products.ProductsActivity"
+    tools:context=".search.SearchActivity"
     android:background="@color/colorPrimary"
     android:padding="4dp">
 
